Banco de dados MySQL e criacao de base de dados automatica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost/plutao
+spring.datasource.username=root
+spring.datasource.password=66@pandoras7Z
 
+spring.jpa.hibernate.ddl-auto=update
