Criando Operação de instanciação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=66@pandoras7Z
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.root = DEBUG
