Pedido, EstadoPagamento e Pagamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/plutao
+spring.datasource.url=jdbc:mysql://localhost/pluton
 spring.datasource.username=root
 spring.datasource.password=66@pandoras7Z
 
